# resume-parser

./: Dockerfile  pyproject.toml  readme.md  requirements.txt
app/: main.py  parser.py
